[metadata]
name = sphinxcontrib-log-cabinet
version = 1.0.1
url = https://github.com/davidism/sphinxcontrib-log-cabinet
license = BSD-3-Clause
license_file = LICENSE.rst
author = David Lord
author_email = davidism@gmail.com
description = Organize changelog directives in Sphinx docs.
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Documentation
    Topic :: Documentation :: Sphinx

[options]
include_package_data = true
packages = find:
package_dir =
    = src
namespace_packages =
    sphinxcontrib
install_requires =
    Sphinx

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
